# git-mux

./: Cargo.toml  README.md
docs/plans/: 2026-03-01-ghd-filter-and-polish-design.md  2026-03-01-ghd-filter-and-polish-implementation.md  2026-03-01-ghd-repo-detail-enhancements-design.md  2026-03-01-ghd-repo-detail-enhancements-implementation.md  2026-03-01-ghd-repo-stats-design.md  2026-03-01-ghd-repo-stats-implementation.md  2026-03-04-workspace-command-center-design.md
src/: app.rs  cache.rs  config.rs  event.rs  main.rs  workspace.rs
src/github/: auth.rs  avatar.rs  ci.rs  code_frequency.rs  commits.rs  contributions.rs  contributors.rs  issues.rs  languages.rs  mod.rs  notifications.rs  prs.rs  readme.rs  repos.rs
src/ui/: ci.rs  contributions.rs  header.rs  home.rs  mod.rs  notification_overlay.rs  notifications.rs  prs.rs  repo_detail.rs  repos.rs
