[package]
name = "ghd"
version = "0.1.0"
edition = "2024"
description = "GitHub Dashboard TUI"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
octocrab = "0.44"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "6"
toml = "0.8"
open = "5"
futures = "0.3"
image = "0.25"
reqwest = { version = "0.12", features = ["rustls-tls"] }
